# gitbook_chatbot

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: llmhub.py  observability.py  settings.py
backend/app/api/routers/: chat.py  chat_config.py  models.py  vercel_response.py
backend/app/api/services/: suggestion.py
backend/app/engine/: __init__.py  engine.py  node_postprocessors.py  query_filter.py  vectordb.py
backend/config/: loaders.yaml
deployments/: README.md  ingress_socialbiz_be.yaml  ingress_socialbiz_chromadb.yaml  namespace_socialbiz-chatbot.yaml  service_socialbiz-be.yaml  service_socialbiz-chroma.yaml
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  (+1 more)
frontend-embed/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
indexing/: .dockerignore  .env.example  .gitignore  Dockerfile-chromadb  Dockerfile-indexing  README.md  docker-compose.yml  pyproject.toml  rag_common.py  rag_console.py  rag_prompt.py
indexing/app/: __init__.py  __main__.py  base.py  build_csv.py  build_md.py  cleansing.py  crawling.py  indexing.py  initializing.py  llm.py  structuring.py  transforming.py
indexing/app/blog/: __init__.py  __main__.py  cleansing.py  crawling.py  indexing.py  structuring.py  transforming.py
indexing/app/gitbook/: __init__.py  __main__.py  cleansing.py
indexing/conf/: blog.yml  home.yml
indexing/docker/: chromadb.sh  entrypoint.sh
(+65 files in other folders)
